shorten flashcard witdh and fix word wrap bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,28 +33,6 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-/* card
-.card {
-  transform-style: preserve-3d;
-  transition: all 0.3s ease;
-}
-.card-flip {
-  transform: rotateY(180deg);
-}
-.front-card {
-  backface-visibility: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.back-card {
-  backface-visibility: hidden;
-  transform: rotateY(180deg);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
-
 /* card */
 .card {
   background-color: transparent;
@@ -77,14 +55,13 @@
 
 .card-front,
 .card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0 2%;
+  word-break: break-all;
 }
 
 .card-back {
